fix dropdown arrow on small

--- a/css2/foundation.css
+++ b/css2/foundation.css
@@ -2961,7 +2961,7 @@ select {
     position: absolute;
     top: 50%;
     margin-top: -3px;
-    right: 1rem; }
+    right: 0; }
 
   .accordion-menu .is-accordion-submenu-parent:not(.has-submenu-toggle) > a:hover::after {    
     display: block;
